# actix-web-static-files

./: Cargo.toml  DEV.md  MIT-LICENSE  README.md  build.rs  impl.rs  release.sh  rust-toolchain.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
src/: builtin_03.rs  deps.rs  impl.rs  lib.rs  resource_files.rs
templates/: README.md
templates/src/: lib.rs
