[package]
authors = ["Alexander Korolev <kilork@yandex.ru>"]
build = "build.rs"
categories = ["network-programming",
              "asynchronous",
              "web-programming::http-server"]
description = """
actix-web static files as resources support.
"""
edition = "2018"
homepage = "https://github.com/kilork/actix-web-static-files"
keywords = ["actix", "http", "web", "static"]
license = "Unlicense OR MIT"
name = "actix-web-static-files"
readme = "README.md"
repository = "https://github.com/kilork/actix-web-static-files"
version = "3.0.5"

[features]
default = []

[dependencies]
actix-web = { version = "4.0.0-beta.6", default-features = false }
actix-service = "2.0.0"
change-detection = { version = "1.2.0", optional = true }
derive_more = "0.99.13"
futures = { version = "0.3.14", default-features = false }
mime_guess = "2.0.3"
path-slash = "0.1.4"

[build-dependencies]
actix-web = { version = "4.0.0-beta.6", default-features = false }
actix-service = { version = "2.0.0", default-features = false }
change-detection = { version = "1.2.0", optional = true }
derive_more = "0.99.13"
futures = { version = "0.3.14", default-features = false }
mime_guess = "2.0.3"
path-slash = "0.1.4"
