[package]
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
categories = ["network-programming",
              "asynchronous",
              "web-programming::http-server"]
description = """
actix-web static files as resources support.
"""
edition = "2021"
homepage = "https://github.com/kilork/actix-web-static-files"
keywords = ["actix", "http", "web", "static"]
license = "Unlicense OR MIT"
name = "actix-web-static-files"
readme = "README.md"
repository = "https://github.com/kilork/actix-web-static-files"
version = "4.0.1"

[features]
default = [ "change-detection" ]
change-detection = [ "static-files/change-detection" ]

[dependencies]
actix-web = { version = "4", default-features = false }
derive_more = "0.99.17"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
static-files = { version = "0.2", default-features = false }

[build-dependencies]
static-files = { version = "0.2", default-features = false }
